# FlatScene-Layer

./: .gitignore  Action.cpp  Action.h  ActionFight.cpp  ActionFight.h  ActionMove.cpp  ActionQuiet0.cpp  ActionQuiet0.h  ActionWalkAuto0.h  Actor.cpp  Actor.h  ActorMouse.cpp  ActorMouse.h  ActorScrollMap.cpp  ActorScrollMap.h  Animation.cpp  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraOS.cpp  CameraOS.h  Color.h  ControlImages.cpp  ControlOutputText.cpp  ControlOutputText.h  Coordinate.cpp  Coordinate.h  Enemy.cpp  EnemyNPC.cpp  EnemyNPC.h  EnemyPunto.cpp  EnemyPunto.h  Engine.cpp  FSActor.cpp  FSActor.h  FSCamera.cpp  FSCamera.h  FSColor.cpp  FSControlImages.cpp  (+100 more)
CMake/: FindSDL.cmake  HPHPFindLibs.cmake
Itemology/: GenericAlgorithms.h  IDebug.cpp  IDebug.h  IFirstEngine.cpp  IFirstEngine.h  IScrollCamera.cpp  IScrollCamera.h  IScrollCameraObject.cpp  IScrollCameraObject.h  IScrollCameraTile.cpp  IScrollCameraTile.h  IScrollLevel.cpp  IScrollLevel.h  IScrollObject.cpp  IScrollObject.h  Itemology.vcxproj  Itemology.vcxproj.filters  main.cpp
demoark/: Action.h  ActionComboDemo0.cpp  ActionComboDemo1.cpp  ActionSimpleDemo0.cpp  ActionWalk0.h  ActionXPunto.cpp  ActorMouse.cpp  ActorMouse.h  ActorScrollMap.cpp  ActorScrollMap.h  Animation.cpp  CameraOS.cpp  CameraOS.h  Enemy.cpp  Enemy.h  EnemyNPC.cpp  EnemyNPC.h  EnemyPunto.cpp  EnemyPunto.h  FreezeGameInterface.cpp  FreezeGameInterface.h  LayerBackground.cpp  LayerBackground.h  Makefile  Map.cpp  Map.h  MenuAGameInterface.cpp  MenuAGameInterface.h  Node.h  OrderGraph.cpp  OrderGraph.h  PAnimation.cpp  PAnimation.h  Player.cpp  Player.h  RutinaColision.cpp  RutinaColision.h  ScrollCamera.cpp  ScrollCamera.h  TestA0GameInterface.cpp  (+21 more)
flatscene/: CMakeLists.txt  FSActor.cpp  FSActor.h  FSCamera.cpp  FSCamera.h  FSColor.cpp  FSColor.h  FSControlImages.cpp  FSControlImages.h  FSControlMultiverse.cpp  FSControlMultiverse.h  FSControlOutputText.cpp  FSControlOutputText.h  FSCoordinate.cpp  FSCoordinate.h  FSEngine.cpp  FSEngine.h  FSFloatPoint.cpp  FSFloatPoint.h  FSImage.cpp  FSImage.h  FSLibrary.cpp  FSLibrary.h  FSMessageHandler.cpp  FSMessageHandler.h  FSPoint.cpp  FSPoint.h  FSRectangle.cpp  FSScreen.h  FSSprite.cpp  FSSprite.h  FSSpriteSet.cpp  FSSpriteSet.h  FSTextBox.cpp  FSTextBox.h  FSTime.cpp  FSTime.h  FSUniverse.cpp  FSparserXML.h  Makefile  (+3 more)
flatscene/include/: Actor.h  Algorithm.h  Camera.h  Canvas.h  Color-impl.h  Color.h  Coordinate.h  DebugLibrary.h  Engine.h  Event.h  EventInfo.h  Events.h  Exception.h  FS.h  FSActor.h  FSCamera.h  FSCanvas.h  FSColor.h  FSControlImages.h  FSControlMultiverse.h  FSControlOutputText.h  FSCoordinate.h  FSEngine.h  FSException.h  FSImage.h  FSImages.h  FSIncludes.h  FSLibrary.h  FSMessageHandler.h  FSMultiverse.h  FSNoncopyable.h  FSPimpl.h  FSPoint.h  FSRectangle.h  FSScreen.h  FSSingleton.h  FSSprite.h  FSSpriteSet.h  FSTextBox.h  FSTime.h  (+39 more)
flatscene/include/tinyxml/: tinystr.h  tinyxml.h
flatscene/src/: Actor.cpp  BitmapHandler.cpp  BitmapHandler.h  Camera.cpp  Canvas.cpp  CanvasFactory.h  CanvasImpl.h  CanvasResource.cpp  CanvasResource.h  CanvasResourceFactory.h  CanvasResourceRendering.h  Color.cpp  DebugLibrary.cpp  Engine.cpp  Event.cpp  EventAdapter.cpp  EventAdapter.h  EventBridge.h  Exception.cpp  FSActor.cpp  FSCamera.cpp  FSCanvas.cpp  FSCanvasImpl.h  FSColor.cpp  FSControlImages.cpp  FSControlMultiverse.cpp  FSControlOutputText.cpp  FSControlOutputTextImpl.h  FSCoordinate.cpp  FSEngine.cpp  FSException.cpp  FSFloatPoint.cpp  FSImage.cpp  FSImages.cpp  FSImagesImpl.h  FSImagesPrivate.cpp  FSImagesPrivate.h  FSLibrary.cpp  FSLibraryImpl.h  FSMessageHandler.cpp  (+62 more)
flatscene/src/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
flatscene/templates/: ActorTemplate.cpp  ActorTemplate.h  CameraTemplate.cpp  CameraTemplate.h  EngineTemplate.cpp  EngineTemplate.h  UniverseTemplate.cpp  UniverseTemplate.h
itemology/: CMakeLists.txt  IDebug.cpp  IDebug.h  IFirstEngine.cpp  IFirstEngine.h  IInclude.h  IScrollCamera.cpp  IScrollCamera.h  IScrollCameraObject.cpp  IScrollCameraObject.h  IScrollCameraTile.cpp  IScrollCameraTile.h  IScrollLevel.cpp  IScrollLevel.h  IScrollObject.cpp  IScrollObject.h  IndexHandler.h  IndexedPointer.h  Itemology.vcxproj  Itemology.vcxproj.filters  SmallTile.cpp  SmallTile.h  Tile.h  item  main.cpp
itemology/cinema/: Actor-impl.h  Actor.h  Camera-impl.h  Camera.h  Cinema.h  Engine-impl.h  Engine.h  Universe-impl.h  Universe.h
itemology/resources/: ArkStandFight.grd  Cuaderno de Bitácora.txt  durp.grd  til1.grd
itemology/resources/.svn/: all-wcprops  entries
itemology/resources/.svn/text-base/: CharacterAlter.png.svn-base  Menu.grd.svn-base  Menu.png.svn-base  config.xml.svn-base  durp.png.svn-base  mapa3.dat.svn-base  mapa3.xml.svn-base  mapa4.xml.svn-base  mapa6.xml.svn-base  mapa7.dat.svn-base  mapa7.xml.svn-base  mapextcas.dat.svn-base  mapextmur.dat.svn-base  pisos.dat.svn-base  texts0.xml.svn-base
itemology/tinyxml/: tinystr.h
resources/: ArkStandFight.grd  Character.grd  CharacterAlter.grd  CharacterFight.grd  Menu.grd  Punto.grd  actiontree.xml  animationalias.xml  mapa3.xml  texts0.xml  til1.grd  til2.grd  til3.grd  tilextmur.grd  tilp.grd
templates/: ActorTemplate.cpp  CameraTemplate.cpp  (+4 more)
(+98 files in other folders)
